--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,14 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "decimal.js": "^10.6.0",
-    "dotenv": "^17.2.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.11"
   },
   "devDependencies": {
