--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.2",
     "node-fetch": "^3.3.2",
-    "nodemailer": "^7.0.11"
+    "nodemailer": "^7.0.11",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "clean-css-cli": "^5.6.3",
